# TFR-CAPSTONE-Q4-Let-s-Eat-

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
TFR/: asgi.py  settings.py  urls.py  wsgi.py
favorites/: models.py  views.py
notifications/: admin.py  models.py  views.py
notifications/migrations/: 0001_initial.py  0002_auto_20210713_1824.py  0003_auto_20210713_1920.py  0004_notification_read.py
notifications/templatetags/: alerts.py
restaurants/: admin.py  apps.py  models.py  views.py
restaurants/migrations/: 0001_initial.py  0002_alter_restaurant_num_favs.py  0002_alter_restaurant_pic_icon.py  0003_alter_restaurant_num_favs.py  0003_alter_restaurant_pic_icon.py  0004_alter_restaurant_pic_icon.py  0005_alter_restaurant_pic_icon.py  0006_alter_restaurant_pic_icon.py  0007_alter_restaurant_pic_icon.py  0008_restaurant_menu.py
restaurants/static/home_styles/: style.css
static/: index.css  login_signup_form.css  styles.css
templates/: 404.html  500.html  base.html  border_test.html  form.html  index.html  lets_eat.html  letseat.html  match.html  nav.html  other_user.html  profile.html  profileNO.html  rest_detail.html  signup_login_form.html  temp_nav_bar  user.html
templates/static/test/: signup_login_form.css  test.css
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_tfruser_picture.py  0002_auto_20210707_2137.py  0002_auto_20210709_1447.py  0003_alter_tfruser_favorites.py  0003_alter_tfruser_picture.py  0004_alter_tfruser_picture.py  0005_alter_tfruser_picture.py
