[tool.poetry]
name = "tfr-capstone-q4"
version = "0.1.0"
description = ""
authors = ["Karen Thomas <68983668+thomasknashville@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.5"
django-mptt = "^0.12.0"
Pillow = "^8.3.1"
python-env = "^1.0.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
django-rest-framework = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
